Cleanup platform/BUILD.gn to mirror DEPS relationships.
Simplifies the BUILD.gn targets, to make dependency relationships very
clear.

Bug: openscreen:89
Change-Id: I8d0392ba04c3abe75464bfec3b789ce06fcb95d0

--- a/cast/sender/BUILD.gn
+++ b/cast/sender/BUILD.gn
@@ -14,6 +14,7 @@ source_set("channel") {
 
   deps = [
     "../../util",
+    "../common:channel",
     "../common/certificate/proto:certificate_proto",
     "../common/channel/proto:channel_proto",
   ]
