Remove Json(Reader|Writer) in favor of namespace
In a recent code review, it was determined that we generally don't want
classes to store JsonWriter and JsonReader instances. Thus, there isn't
really a point in having instances of these classes.

This patch deletes both JsonReader and JsonWriter in favor of a new,
proper json:: namespace in json_serialization.h that includes both
json::Read and json::Write.

Change-Id: Ib31c84339f1bf18919764fd0297a60d34cb66573

--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -21,12 +21,10 @@ source_set("util") {
     "crypto/sha2.cc",
     "crypto/sha2.h",
     "integer_division.h",
-    "json/json_reader.cc",
-    "json/json_reader.h",
+    "json/json_serialization.cc",
+    "json/json_serialization.h",
     "json/json_value.cc",
     "json/json_value.h",
-    "json/json_writer.cc",
-    "json/json_writer.h",
     "logging.h",
     "operation_loop.cc",
     "operation_loop.h",
@@ -65,9 +63,8 @@ source_set("unittests") {
     "crypto/secure_hash_unittest.cc",
     "crypto/sha2_unittest.cc",
     "integer_division_unittest.cc",
-    "json/json_reader_unittest.cc",
+    "json/json_serialization_unittest.cc",
     "json/json_value_unittest.cc",
-    "json/json_writer_unittest.cc",
     "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
     "serial_delete_ptr_unittest.cc",
