Upgrade Mac bot to 10.15, to auto-upgrade compiler/toolchain.
Bug: openscreen:86
Change-Id: I6eaca1e376dedb509be3c3009b0c33cce322647e

--- a/infra/config/global/cr-buildbucket.cfg
+++ b/infra/config/global/cr-buildbucket.cfg
@@ -74,7 +74,23 @@ builder_mixins {
 
 builder_mixins {
   name: "mac"
-  dimensions: "os:Mac-10.13"
+
+  # NOTE: The OS version here will determine which version of XCode is being
+  # used, and thus determines the compiler/linker versions. Relevant links; so
+  # you and I never have to spend hours finding this stuff all over again to fix
+  # things like https://crbug.com/openscreen/86:
+  #
+  # 1. The recipe code that uses the "osx_sdk" recipe module:
+  #
+  #   https://cs.chromium.org/chromium/build/scripts/slave/recipes
+  #     /openscreen.py?rcl=671f9f1c5f5bef81d0a39973aa8729cc83bb290e&l=74
+  #
+  # 2. The XCode version look-up table in the "osx_sdk" recipe module:
+  #
+  #   https://cs.chromium.org/chromium/tools/depot_tools/recipes/recipe_modules
+  #     /osx_sdk/api.py?rcl=fe18a43d590a5eac0d58e7e555b024746ba290ad&l=26
+  dimensions: "os:Mac-10.15"
+
   caches: {
     # Cache for mac_toolchain tool and XCode.app used in recipes.
     name: "osx_sdk"
