Discovery: API Skeleton
This CL provides the skeleton for a top-level discovery API. Currently,
this API is aimed at specifically DNS-SD, but it could be generalized
in future both to support non-DNS-SD discovery methods as well as to
support multiple DNS-SD discovery methods (such as both OSP and CastV2).

Change-Id: I5bc307f4a8176f1ef005ec96f4b220b55fcc3ac3

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -16,6 +16,7 @@ group("gn_all") {
     "cast/streaming:sender",
     "discovery:dnssd",
     "discovery:mdns",
+    "discovery:public",
     "osp",
     "osp/msgs",
     "platform",
