--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -59,6 +59,19 @@ source_set("channel") {
   ]
 }
 
+source_set("discovery") {
+  sources = [
+    "discovery/service_info.h",
+  ]
+
+  deps = []
+
+  public_deps = [
+    "../../platform",
+    "../../util",
+  ]
+}
+
 source_set("test_helpers") {
   testonly = true
   sources = [
