Add receiver authentication steps
This change adds the necessary crypto + messaging steps for a Cast
receiver to authenticate itself as such.  It also adds an integration
test that checks our sender authentication code against this receiver
authentication code.

Bug: openscreen:91
Change-Id: If298b8781bc95116714eb36fa68ef96ba82742a3

--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -61,16 +61,20 @@ source_set("channel") {
 
 source_set("test_helpers") {
   testonly = true
+
+  # TODO(btolsch): Move to testing/ folders.
   sources = [
     "certificate/test_helpers.cc",
     "certificate/test_helpers.h",
     "channel/test/fake_cast_socket.h",
     "channel/test/mock_cast_message_handler.h",
+    "channel/test/mock_socket_error_handler.h",
   ]
   public_deps = [
     ":certificate",
     ":channel",
     "../../platform:test",
+    "../../third_party/abseil",
     "../../third_party/boringssl",
     "../../third_party/googletest:gmock",
   ]
@@ -98,6 +102,7 @@ source_set("unittests") {
     ":channel",
     ":test_helpers",
     "../../platform",
+    "../../testing/util",
     "../../third_party/boringssl",
     "../../third_party/googletest:gmock",
     "../../third_party/googletest:gtest",
