--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -3,7 +3,7 @@
 # found in the LICENSE file.
 
 import("//build_overrides/build.gni")
-import("//testing/libfuzzer/fuzzer_test.gni")
+import("../../testing/libfuzzer/fuzzer_test.gni")
 
 source_set("common") {
   sources = [
