Add receiver authentication steps
This change adds the necessary crypto + messaging steps for a Cast
receiver to authenticate itself as such.  It also adds an integration
test that checks our sender authentication code against this receiver
authentication code.

Bug: openscreen:91
Change-Id: If298b8781bc95116714eb36fa68ef96ba82742a3

--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -12,6 +12,8 @@ source_set("util") {
     "big_endian.h",
     "crypto/certificate_utils.cc",
     "crypto/certificate_utils.h",
+    "crypto/digest_sign.cc",
+    "crypto/digest_sign.h",
     "crypto/openssl_util.cc",
     "crypto/openssl_util.h",
     "crypto/rsa_private_key.cc",
