--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -42,8 +42,6 @@ source_set("mdns") {
 }
 
 source_set("dnssd") {
-  defines = []
-
   sources = [
     "dnssd/impl/conversion_layer.cc",
     "dnssd/impl/conversion_layer.h",
@@ -70,6 +68,18 @@ source_set("dnssd") {
 
   public_deps = [
     ":mdns",
+  ]
+}
+
+source_set("public") {
+  sources = [
+    "public/dns_sd_service_publisher.h",
+    "public/dns_sd_service_watcher.h",
+    "public/temp.cc",
+  ]
+
+  public_deps = [
+    ":dnssd",
   ]
 }
 
