--- a/cast/streaming/BUILD.gn
+++ b/cast/streaming/BUILD.gn
@@ -132,50 +132,52 @@ source_set("unittests") {
   ]
 }
 
-openscreen_fuzzer_test("compound_rtcp_parser_fuzzer") {
-  sources = [
-    "compound_rtcp_parser_fuzzer.cc",
-  ]
+if (!build_with_chromium) {
+  openscreen_fuzzer_test("compound_rtcp_parser_fuzzer") {
+    sources = [
+      "compound_rtcp_parser_fuzzer.cc",
+    ]
 
-  deps = [
-    ":sender",
-    "../../third_party/abseil",
-  ]
+    deps = [
+      ":sender",
+      "../../third_party/abseil",
+    ]
 
-  seed_corpus = "compound_rtcp_parser_fuzzer_seeds"
+    seed_corpus = "compound_rtcp_parser_fuzzer_seeds"
 
-  # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
-  libfuzzer_options = [ "max_len=1500" ]
-}
+    # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
+    libfuzzer_options = [ "max_len=1500" ]
+  }
 
-openscreen_fuzzer_test("rtp_packet_parser_fuzzer") {
-  sources = [
-    "rtp_packet_parser_fuzzer.cc",
-  ]
+  openscreen_fuzzer_test("rtp_packet_parser_fuzzer") {
+    sources = [
+      "rtp_packet_parser_fuzzer.cc",
+    ]
 
-  deps = [
-    ":receiver",
-    "../../third_party/abseil",
-  ]
+    deps = [
+      ":receiver",
+      "../../third_party/abseil",
+    ]
 
-  seed_corpus = "rtp_packet_parser_fuzzer_seeds"
+    seed_corpus = "rtp_packet_parser_fuzzer_seeds"
 
-  # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
-  libfuzzer_options = [ "max_len=1500" ]
-}
+    # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
+    libfuzzer_options = [ "max_len=1500" ]
+  }
 
-openscreen_fuzzer_test("sender_report_parser_fuzzer") {
-  sources = [
-    "sender_report_parser_fuzzer.cc",
-  ]
+  openscreen_fuzzer_test("sender_report_parser_fuzzer") {
+    sources = [
+      "sender_report_parser_fuzzer.cc",
+    ]
 
-  deps = [
-    ":receiver",
-    "../../third_party/abseil",
-  ]
+    deps = [
+      ":receiver",
+      "../../third_party/abseil",
+    ]
 
-  seed_corpus = "sender_report_parser_fuzzer_seeds"
+    seed_corpus = "sender_report_parser_fuzzer_seeds"
 
-  # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
-  libfuzzer_options = [ "max_len=1500" ]
+    # Note: 1500 is approx. kMaxRtpPacketSize in rtp_defines.h.
+    libfuzzer_options = [ "max_len=1500" ]
+  }
 }
