--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8,6 +8,8 @@ import("osp/build/config/services.gni")
 # All compilable non-test targets in the repository (both executables and
 # source_sets).
 group("gn_all") {
+  testonly = true
+
   deps = [
     "cast/common:certificate",
     "cast/common:channel",
@@ -30,6 +32,10 @@ group("gn_all") {
 
   if (current_toolchain == host_toolchain) {
     deps += [ "tools/cddl" ]
+  }
+
+  if (is_posix) {
+    deps += [ "cast/test:make_crl_tests" ]
   }
 
   if (use_mdns_responder) {
