Add ARM buildbot, update configurations
This patch updates the build bots to use the most appropriate dimensions
for the fleet at this time (Dec 2019), and adds a new ARM64 buildbot.

Change-Id: I5c44619196654aa3f17bbc3519aa00344d5c6de5

--- a/infra/config/global/cr-buildbucket.cfg
+++ b/infra/config/global/cr-buildbucket.cfg
@@ -62,14 +62,19 @@ builder_mixins {
   }
 }
 
+# NOTES: As of December 2019, the vast majority of the Ubuntu build bots, (75%+)
+# are still running 16.04 as it is the second newest LTS release.
+# Although 18.04 is the current LTS release, the fleet has nearly no 18.04
+# bots deployed (.3%), and only 3% of Ubuntu bots are 19.04 enabled, which is
+# needed for a modern version of GCC.
 builder_mixins {
   name: "linux"
   dimensions: "os:Ubuntu-16.04"
 }
 
 builder_mixins {
-  name: "linux1804"
-  dimensions: "os:Ubuntu-18.04"
+  name: "linux1904"
+  dimensions: "os:Ubuntu-19.04"
 }
 
 builder_mixins {
@@ -87,6 +92,14 @@ builder_mixins {
   dimensions: "cpu:x86-64"
   recipe {
     properties: "target_cpu:x64"
+  }
+}
+
+builder_mixins {
+  name: "arm64"
+  dimensions: "cpu:arm64"
+  recipe {
+    properties: "target_cpu:arm64"
   }
 }
 
@@ -123,7 +136,7 @@ buckets {
 
     builders {
       name: "linux64_gcc_debug"
-      mixins: "linux1804"
+      mixins: "linux1904"
       mixins: "debug"
       mixins: "x64"
       mixins: "gcc"
@@ -134,6 +147,12 @@ buckets {
       mixins: "linux"
       mixins: "x64"
       mixins: "tsan"
+    }
+
+    builders {
+      name: "linux_arm64"
+      mixins: "linux"
+      mixins: "arm64"
     }
 
     builders {
@@ -187,7 +206,7 @@ buckets: {
 
     builders {
       name: "linux64_gcc_debug"
-      mixins: "linux1804"
+      mixins: "linux1904"
       mixins: "debug"
       mixins: "x64"
       mixins: "gcc"
@@ -198,6 +217,12 @@ buckets: {
       mixins: "linux"
       mixins: "x64"
       mixins: "tsan"
+    }
+
+    builders {
+      name: "linux_arm64"
+      mixins: "linux"
+      mixins: "arm64"
     }
 
     builders {
