--- a/infra/config/global/luci-scheduler.cfg
+++ b/infra/config/global/luci-scheduler.cfg
@@ -25,6 +25,7 @@ trigger {
   triggers: "linux64_debug"
   triggers: "linux64_gcc_debug"
   triggers: "linux64_tsan"
+  triggers: "linux_arm64"
   triggers: "mac_debug"
 }
 
@@ -67,6 +68,16 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.openscreen.ci"
     builder: "linux64_tsan"
+  }
+}
+
+job {
+  id: "linux_arm64"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.openscreen.ci"
+    builder: "linux_arm64"
   }
 }
 
