# Enter a description of the change. DO NOT CHECKIN: Revert "Fix code broken by a recent unreviewed commit."
This reverts commit 8e2faa89b996635502d944dafae6b1caa32ad0c1.

Change-Id: I8c775be74535110f7d7a58503dd601bef71faded

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -70,6 +70,7 @@ source_set("openscreen_unittests_all") {
     "cast/receiver:unittests",
     "cast/sender:unittests",
     "cast/streaming:unittests",
+    "cast/test:make_crl_tests",
     "cast/test:unittests",
     "discovery:unittests",
     "osp:unittests",
