Integrate ReceiverSession into standalone receiver
This patch integrates the ReceiverSession into the
standalone_receiver/receiver demo. A dummy messageport implementation is
included.

Change-Id: I78040197730c14531c33a1a45685574762b5562a

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -56,7 +56,7 @@ group("gn_all") {
 
     # TODO(crbug.com/openscreen/86): Build for Mac too once the mac buildbot
     # compiler is upgraded.
-    if (!is_mac) {
+    if (!is_mac || true) {
       deps += [ "cast/standalone_receiver:cast_receiver" ]
     }
   }
