Update buildtools DEPS revision, add hooks; and fix GN libs prefix.
Moves the buildtools dependency to the latest commit
(8d2132841536523249669813b928e29144d487f9), and adds hooks for
auto-downloading clang-format. Then, fixes a GN-internal change that
broke the linker command line for specifying external libraries.

Also, shucked the tools/install-build-tools.sh script, removing the
unnecessary ninja download (it's in depot_tools now), and the
clang-format download.

The result of all this is that all developers will be using the correct
versions of all development and build tools, and upgrades can easily be
managed via changes to the DEPS file from here onwards.

NOTE: Developers will want to run `rm -rf buildtools/ && gclient sync`
to ensure they have a clean/consistent checkout with the correct
tools/revisions.

Bug: openscreen:95
Change-Id: I5028d9f97f11a62f0a10d3edf8f46631e72a6ae6

--- a/cast/standalone_receiver/BUILD.gn
+++ b/cast/standalone_receiver/BUILD.gn
@@ -49,9 +49,9 @@ if (!build_with_chromium) {
         "sdl_video_player.h",
       ]
       libs += [
-        "-lSDL2",
-        "-lavcodec",
-        "-lavutil",
+        "SDL2",
+        "avcodec",
+        "avutil",
       ]
     } else {
       sources += [
