--- a/util/BUILD.gn
+++ b/util/BUILD.gn
@@ -32,6 +32,8 @@ source_set("util") {
     "operation_loop.h",
     "saturate_cast.h",
     "serial_delete_ptr.h",
+    "simple_fraction.cc",
+    "simple_fraction.h",
     "std_util.h",
     "stringprintf.h",
     "trace_logging.h",
@@ -70,6 +72,7 @@ source_set("unittests") {
     "operation_loop_unittest.cc",
     "saturate_cast_unittest.cc",
     "serial_delete_ptr_unittest.cc",
+    "simple_fraction_unittest.cc",
     "trace_logging/scoped_trace_operations_unittest.cc",
     "trace_logging_unittest.cc",
     "yet_another_bit_vector_unittest.cc",
