--- a/BUILD.gn
+++ b/BUILD.gn
@@ -5,6 +5,14 @@
 import("//build_overrides/build.gni")
 import("osp/build/config/services.gni")
 
+declare_args() {
+  # Set to true to force building the standalone receiver on Mac. It's currently
+  # disabled due to build bot struggles, but works fine on local, recent clang
+  # installations.
+  # TODO(jophba): remove this once it is fixed on the bots.
+  force_build_standalone_receiver = false
+}
+
 # All compilable non-test targets in the repository (both executables and
 # source_sets).
 group("gn_all") {
@@ -57,7 +65,7 @@ group("gn_all") {
 
     # TODO(crbug.com/openscreen/86): Build for Mac too once the mac buildbot
     # compiler is upgraded.
-    if (!is_mac) {
+    if (!is_mac || force_build_standalone_receiver) {
       deps += [ "cast/standalone_receiver:cast_receiver" ]
     }
   }
