Integrate ReceiverSession into standalone receiver
This patch integrates the ReceiverSession into the
standalone_receiver/receiver demo. A dummy messageport implementation is
included.

Change-Id: I78040197730c14531c33a1a45685574762b5562a

--- a/cast/standalone_receiver/BUILD.gn
+++ b/cast/standalone_receiver/BUILD.gn
@@ -24,9 +24,14 @@ if (!build_with_chromium) {
     sources = [
       "main.cc",
       "memory_util.h",
+      "simple_message_port.cc",
+      "simple_message_port.h",
+      "streaming_playback_controller.cc",
+      "streaming_playback_controller.h",
     ]
     deps = [
       "../../platform",
+      "../../third_party/jsoncpp",
       "../streaming:receiver",
     ]
 
@@ -49,9 +54,9 @@ if (!build_with_chromium) {
         "sdl_video_player.h",
       ]
       libs += [
-        "-lSDL2",
-        "-lavcodec",
-        "-lavutil",
+        "SDL2",
+        "avcodec",
+        "avutil",
       ]
     } else {
       sources += [
