Use separate toolchains for cross-compiling
This change makes cross-compiling targets use different toolchains,
instead of only adding different compiler flags.  This has the advantage
that it's easier to have cross-toolchain dependencies like protobuf
object files for the target architecture depending on the protoc
compiler for the host architecture.  This is also how Chromium manages
toolchains.

Bug: openscreen:18
Change-Id: If2547c8cfeec3142db34c2dfae2b93982d8472c5

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -28,12 +28,9 @@ group("gn_all") {
     "third_party/boringssl",
     "third_party/jsoncpp",
     "third_party/tinycbor",
+    "tools/cddl($host_toolchain)",
     "util",
   ]
-
-  if (current_toolchain == host_toolchain) {
-    deps += [ "tools/cddl" ]
-  }
 
   if (use_mdns_responder) {
     deps += [ "osp/impl/discovery/mdns:mdns_demo" ]
@@ -53,12 +50,12 @@ group("gn_all") {
 
   if (!build_with_chromium) {
     deps += [
-      "third_party/protobuf:protoc",
+      "third_party/protobuf:protoc($host_toolchain)",
       "third_party/zlib",
     ]
 
     if (is_posix) {
-      deps += [ "cast/test:make_crl_tests" ]
+      deps += [ "cast/test:make_crl_tests($host_toolchain)" ]
     }
 
     # TODO(crbug.com/openscreen/86): Build for Mac too once the mac buildbot
