--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -61,13 +61,17 @@ source_set("channel") {
 
 source_set("discovery") {
   sources = [
+    "discovery/service_info.cc",
     "discovery/service_info.h",
   ]
 
   deps = []
 
   public_deps = [
+    "../../discovery:dnssd",
+    "../../discovery:public",
     "../../platform",
+    "../../third_party/abseil",
   ]
 }
 
@@ -80,10 +84,13 @@ source_set("test_helpers") {
     "channel/testing/fake_cast_socket.h",
     "channel/testing/mock_cast_message_handler.h",
     "channel/testing/mock_socket_error_handler.h",
+    "discovery/testing/discovery_utils.cc",
+    "discovery/testing/discovery_utils.h",
   ]
   public_deps = [
     ":certificate",
     ":channel",
+    ":discovery",
     "../../platform:test",
     "../../third_party/abseil",
     "../../third_party/boringssl",
@@ -106,11 +113,13 @@ source_set("unittests") {
     "channel/namespace_router_unittest.cc",
     "channel/virtual_connection_manager_unittest.cc",
     "channel/virtual_connection_router_unittest.cc",
+    "discovery/service_info_unittest.cc",
   ]
 
   deps = [
     ":certificate",
     ":channel",
+    ":discovery",
     ":test_helpers",
     "../../platform",
     "../../testing/util",
