--- a/infra/config/global/cr-buildbucket.cfg
+++ b/infra/config/global/cr-buildbucket.cfg
@@ -107,7 +107,7 @@ builder_mixins {
 
 builder_mixins {
   name: "arm64"
-  dimensions: "cpu:arm64"
+  dimensions: "cpu:x86-64"
   recipe {
     properties: "target_cpu:arm64"
   }
