mDNS: Probe Implementation
This CL finishes the Probing phase as described and first started in CL
https://chromium-review.googlesource.com/c/openscreen/+/1994300.

Change-Id: I6270074f69523380334a9b0c60de794710378a9c

--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -116,6 +116,7 @@ source_set("unittests") {
     "dnssd/public/dns_sd_instance_record_unittest.cc",
     "dnssd/public/dns_sd_txt_record_unittest.cc",
     "mdns/mdns_probe_manager_unittest.cc",
+    "mdns/mdns_probe_unittest.cc",
     "mdns/mdns_publisher_unittest.cc",
     "mdns/mdns_querier_unittest.cc",
     "mdns/mdns_random_unittest.cc",
