Discovery: E2E Bug Fixes
This CL adds the bug-fixes needed to support a full E2E runtime of the
discovery stack.

Change-Id: Ie8fd43ac939896f6c3e9e235ef44e6bef4c96d28

--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -65,13 +65,25 @@ source_set("discovery") {
     "discovery/service_info.h",
   ]
 
-  deps = []
-
-  public_deps = [
+  deps = [
     "../../discovery:dnssd",
     "../../discovery:public",
     "../../platform",
     "../../third_party/abseil",
+  ]
+}
+
+executable("discovery_demo") {
+  sources = [
+    "discovery/demo/main.cc",
+  ]
+
+  deps = []
+
+  public_deps = [
+    ":discovery",
+    "../../discovery:dnssd",
+    "../../discovery:public",
   ]
 }
 
