Update NetworkInterface To Allow Loopback
This CL adds support for the loopback interface in the platform layer

Change-Id: I52a21823266330d8ed6db3485dd124052dd13343

--- a/platform/BUILD.gn
+++ b/platform/BUILD.gn
@@ -68,6 +68,8 @@ if (!build_with_chromium) {
 
     sources = [
       "impl/logging.h",
+      "impl/network_interface.cc",
+      "impl/network_interface.h",
       "impl/socket_handle.h",
       "impl/socket_handle_waiter.cc",
       "impl/socket_handle_waiter.h",
