--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -78,6 +78,7 @@ source_set("dnssd") {
 
 source_set("public") {
   sources = [
+    "public/dns_sd_service_publisher.h",
     "public/dns_sd_service_watcher.h",
     "public/temp.cc",
   ]
