Discovery: Add Reporting Client + Initialization Struct
This CL adds the following:
- A virtual reporting class, to allow errors occurring in the discovery
  pipeline to get reported back to the caller.
- An initialization configuration struct, to provide initialzation
  parameters to the mDNS and DNS-SD layers

These 2 changes are combined into one CL because they touch all the
same files, so reviewing them together / writing them together should
save everyone time

Future work will include:
- Adding error reporting to the discovery/public dir. This work is
  pending completing of a parallel CL which will require redoing any
  work done on this goal now:
  https://chromium-review.googlesource.com/c/openscreen/+/2024453
- Adding support for state change callbacks in the reporting client.

Change-Id: Iadb5e53b818beae82c0135ad27a11294823318d4

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -26,6 +26,7 @@ group("gn_all") {
     "cast/sender:channel",
     "cast/streaming:receiver",
     "cast/streaming:sender",
+    "discovery:common",
     "discovery:dnssd",
     "discovery:mdns",
     "discovery:public",
