--- a/cast/sender/BUILD.gn
+++ b/cast/sender/BUILD.gn
@@ -31,6 +31,12 @@ source_set("sender") {
   sources = [
     "cast_app_availability_tracker.cc",
     "cast_app_availability_tracker.h",
+    "cast_app_discovery_service_impl.cc",
+    "cast_app_discovery_service_impl.h",
+    "cast_platform_handler.cc",
+    "cast_platform_handler.h",
+    "public/cast_app_discovery_service.cc",
+    "public/cast_app_discovery_service.h",
     "public/cast_media_source.cc",
     "public/cast_media_source.h",
   ]
@@ -44,16 +50,37 @@ source_set("sender") {
   ]
 }
 
+source_set("test_helpers") {
+  testonly = true
+  sources = [
+    "testing/test_helpers.cc",
+    "testing/test_helpers.h",
+  ]
+
+  deps = [
+    "../../third_party/googletest:gtest",
+    "../../util",
+    "../common:channel",
+  ]
+
+  public_deps = [
+    ":channel",
+  ]
+}
+
 source_set("unittests") {
   testonly = true
   sources = [
     "cast_app_availability_tracker_unittest.cc",
+    "cast_app_discovery_service_impl_unittest.cc",
+    "cast_platform_handler_unittest.cc",
     "channel/cast_auth_util_unittest.cc",
   ]
 
   deps = [
     ":channel",
     ":sender",
+    ":test_helpers",
     "../../platform",
     "../../platform:test",
     "../../testing/util",
