--- a/discovery/BUILD.gn
+++ b/discovery/BUILD.gn
@@ -111,6 +111,7 @@ source_set("testing") {
   testonly = true
 
   sources = [
+    "common/testing/mock_reporting_client.h",
     "dnssd/testing/fake_dns_record_factory.cc",
     "mdns/testing/mdns_test_util.cc",
     "mdns/testing/mdns_test_util.h",
