--- a/BUILD.gn
+++ b/BUILD.gn
@@ -64,7 +64,10 @@ group("gn_all") {
     ]
 
     if (is_posix) {
-      deps += [ "cast/test:make_crl_tests($host_toolchain)" ]
+      deps += [
+        "cast/common:discovery_demo",
+        "cast/test:make_crl_tests($host_toolchain)",
+      ]
     }
 
     # TODO(crbug.com/openscreen/86): Build for Mac too once the mac buildbot
