--- a/cast/common/BUILD.gn
+++ b/cast/common/BUILD.gn
@@ -65,14 +65,31 @@ source_set("discovery") {
     "discovery/service_info.h",
   ]
 
-  deps = []
+  public_deps = []
 
-  public_deps = [
+  deps = [
     "../../discovery:dnssd",
     "../../discovery:public",
     "../../platform",
     "../../third_party/abseil",
   ]
+}
+
+# The following target is only activated in standalone builds (see :platform).
+if (!build_with_chromium && is_posix) {
+  executable("discovery_demo") {
+    sources = [
+      "discovery/demo/main.cc",
+    ]
+
+    deps = []
+
+    public_deps = [
+      ":discovery",
+      "../../discovery:dnssd",
+      "../../discovery:public",
+    ]
+  }
 }
 
 source_set("test_helpers") {
